# turtlebot2_rplidar

./: README.md
turtlebot2_rplidar_description/: CMakeLists.txt  package.xml
turtlebot2_rplidar_description/robots/: kobuki_hexagons_astra_rplidar.urdf.xacro
turtlebot2_rplidar_description/urdf/: turtlebot_properties.urdf.xacro
turtlebot2_rplidar_description/urdf/gazebo/: camera_plugin.urdf.xacro  laser_plugin.urdf.xacro
turtlebot2_rplidar_description/urdf/sensors/: astra.urdf.xacro  rplidar.urdf.xacro
turtlebot2_rplidar_gazebo/: CMakeLists.txt  package.xml
turtlebot2_rplidar_gazebo/launch/: turtlebot_world.launch
