<?xml version="1.0"?>
<package format="2">
  <name>turtlebot2_rplidar_gazebo</name>
  <version>0.0.0</version>
  <description>The turtlebot2_rplidar_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="arjun@todo.todo">Arjun Kumar</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  
  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
